src/tests/snapshots/lx__tests__snapshots@assign_to_int_literal_error.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/assign_to_int_literal_error.lx
---
ERROR! unable to assign to 1 at line 1:1

