src/tests/snapshots/lx__tests__snapshots@catch_with_no_name_error.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/catch_with_no_name_error.lx
---
ERROR! expected identifier, but found { at line 3:9

