src/tests/snapshots/lx__tests__snapshots@complex_loop_behavior.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/complex_loop_behavior.lx
---
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 0
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 1
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 2
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 3
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 4
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 5
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 6
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 7
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 8
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 9
k: 0
k: 1
k: 2
k: 3
j: 0
k: 0
k: 1
k: 2
k: 3
j: 1
k: 0
k: 1
k: 2
k: 3
j: 2
k: 0
k: 1
k: 2
k: 3
j: 3
k: 0
k: 1
k: 2
k: 3
j: 4
k: 0
k: 1
k: 2
k: 3
j: 5
i: 10
OK!

