src/tests/snapshots/lx__tests__snapshots@constants.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/constants.lx
---
1
1.5
0.0000000000015
def
abc

abc
    def
        ghi
            jkl

true
false
null
OK!

