src/tests/snapshots/lx__tests__snapshots@deeply_nested_calls.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/deeply_nested_calls.lx
---
got: Int(155):
OK!

