src/tests/snapshots/lx__tests__snapshots@for_loop.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/for_loop.lx
---
0
1
2
3
4
5
6
7
8
9
10
0
1
2
3
4
5
6
7
8
9
10
a = 1
b = 2
c = 3
a = 1
b = 2
c = 3
OK!

