src/tests/snapshots/lx__tests__snapshots@misplaced_break_error.lx.snap
---
source: src/tests/mod.rs
expression: output_str
input_file: src/tests/testdata/misplaced_break_error.lx
---
ERROR! break not allowed outside of loop at line 3:5

